apps/gateway-api/src/main/resources/templates/service.ftl.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${appName}
  namespace: ${namespace}
spec:
  selector:
    app: ${appName}
  ports:
    - port: ${servicePort}
      targetPort: ${targetPort}
      protocol: TCP
