apps/gateway-api/src/main/resources/templates/ingressroute.ftl.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${name}
  namespace: ${namespace}
spec:
  entryPoints:
<#if sslEnabled>
    - websecure
<#else>
    - web
</#if>
<#if sslEnabled>
  tls:
  <#if certResolver?? && (certResolver?length > 0)>
    certResolver: ${certResolver}
  </#if>
</#if>
  routes:
    - match: ${match}
      kind: Rule
      services:
        - name: ${serviceName}
          <#if serviceNamespace??>
          namespace: ${serviceNamespace}
          </#if>
          port: ${servicePort}
      <#if middlewares?? && (middlewares?size > 0)>
      middlewares:
      <#list middlewares as mw>
        - name: ${mw.name}
          namespace: ${mw.namespace}
      </#list>
      </#if>
